feat: Исправил ошибку (для корректного вывода в Swagger Editor)
