# controllers/auth-controller.js
@@ -4,7 +4,7 @@
  * @group Авторизация (пользователь) - Функции для авторизации пользователя
  * @param {SignUpDto.model} input.body.required Входные данные
  * @returns {AuthDto.model} 201 - Авторизационные данные пользователя
- * @returns {ApiError.model} 300, 400, 401, 403, 404, 500 - Ошибка запроса
+ * @returns {ApiError.model} default - Ошибка запроса
  */
 
 /**
@@ -13,16 +13,16 @@
  * @group Авторизация (пользователь) - Функции для авторизации пользователя
  * @param {SignInDto.model} input.body.required Входные данные
  * @returns {AuthDto.model} 200 - Авторизационные данные пользователя
- * @returns {ApiError.model} 300, 401, 404, 500 - Ошибка запроса
+ * @returns {ApiError.model} default - Ошибка запроса
  */
 
 /**
  * Выход пользователя из системы
  * @route POST /auth/logout
  * @group Авторизация (пользователь) - Функции для авторизации пользователя
- * @param {LogoutDto} input.body.required Входные данные
+ * @param {LogoutDto.model} input.body.required Входные данные
  * @returns {SuccessDto.model} 200 - Флаг, определяющий успех операции выхода пользователя из системы
- * @returns {ApiError.model} 300, 401, 404, 500 - Ошибка запроса
+ * @returns {ApiError.model} default - Ошибка запроса
  */
 
 
@@ -32,7 +32,7 @@
  * @group Авторизация (для управляющего веб сайта) - Функция для авторизации пользователя
  * @param {SignInDto.model} input.body.required Входные данные
  * @returns {AuthDto.model} 200 - Авторизационные данные пользователя
- * @returns {ApiError.model} 300, 401, 404, 500 - Ошибка запроса
+ * @returns {ApiError.model} default - Ошибка запроса
  */
 
 /**
@@ -40,7 +40,7 @@
  * @route POST /auth/management/logout
  * @group Авторизация (для управляющего веб сайта) - Функция для авторизации пользователя
  * @returns {SuccessDto.model} 200 - Флаг, определяющий успех операции выхода пользователя из системы
- * @returns {ApiError.model} 300, 401, 404, 500 - Ошибка запроса
+ * @returns {ApiError.model} default - Ошибка запроса
  */
 
 /**
@@ -49,7 +49,7 @@
  * @group Авторизация (пользователь) - Функции для авторизации пользователя
  * @param {ActivationLinkDto.model} input.body.required Входные данные
  * @returns {SuccessDto.model} 200 - Флаг, определяющий успех операции подтверждения пользователя
- * @returns {ApiError.model} 300, 401, 404, 500 - Ошибка запроса
+ * @returns {ApiError.model} default - Ошибка запроса
  */
 
 /**
@@ -57,5 +57,5 @@
  * @route POST /auth/refresh/token
  * @group Авторизация (пользователь) - Функции для авторизации пользователя
  * @returns {AuthDto.model} 201 - Авторизационные данные пользователя
- * @returns {ApiError.model} 300, 401, 404, 500 - Ошибка запроса
+ * @returns {ApiError.model} default - Ошибка запроса
  */
